--- a/main.tex
+++ b/main.tex
@@ -1,18 +1,20 @@
 \documentclass[12pt,A4paper,oneside]{ctexbook}
-\usepackage{mynote}
+\usepackage{./style/mynote}
 
+\usepackage{./style/code}
 %原作者--荀徒之
 
 \begin{document}
-
+	
+\university{NEUQ}
+\coursename{Introduction~to~Artificial~Intelligence}
+\title{Lecture Note}
+\zhcoursename{人工智能导论}
+\author{ComplexPug}
+\coursedate{2023 Spring}
+\instructor{Instructors: Dr.~Ins \textsc{Tructor1}\par
+   	Dr.~Ins \textsc{Tructor2}, Dr.~Ins \textsc{Tructor3}\par}
 \begin{titlepage}
-    \university{NEUQ}
-    \courseid{Introduction~to~Artificial~Intelligence}
-    \title{Lecture Note}
-    \author{ComplexPug}
-    \coursedate{2023 Spring}
-    \instructor{Instructors: Dr.~Ins \textsc{Tructor1}\par
-    	Dr.~Ins \textsc{Tructor2}, Dr.~Ins \textsc{Tructor3}\par}
     \maketitle
 \end{titlepage}
 
@@ -131,5 +133,40 @@
 \end{定义}
 
 \section{扩展计算机语言高亮}
-我删掉了
+
+\lstinputlisting[
+	style = python,
+	caption = {你好},
+	label = {nihao}
+]{./code/example.py}
+
+\lstinputlisting[
+	style = c++,
+	caption = {1},
+	label = {2}
+]{./code/example.cpp}
+
+\lstinputlisting[
+	style = masm,
+	caption = {3},
+	label = {4}
+]{./code/example.asm}
+
+\begin{lstlisting}[style = c++,title = \centering{\huge{6}}]
+#include <bits/stdc++.h>
+#define FOR(i, a, b) for(int i = a; i <= b; ++i)
+using namespace std;
+#define int long long
+const int _ = 2e6+6;
+
+signed main() {
+	ios::sync_with_stdio(false);
+	cin.tie(0), cout.tie(0);
+	/*注释*/
+	注释
+	return 0;
+}
+\end{lstlisting}
+
+
 \end{document}
