更新ctexset的subsection和间距

--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,6 @@
 \usepackage{./style/mynote}
 
 \usepackage{./style/code}
-%原作者--荀徒之
 
 \begin{document}
 	
@@ -11,7 +10,7 @@
 \title{Lecture Note}
 \zhcoursename{人工智能导论}
 \author{ComplexPug}
-\coursedate{2023 Spring}
+\coursedate{2023/5/2}
 \instructor{Instructors: Dr.~Ins \textsc{Tructor1}\par
    	Dr.~Ins \textsc{Tructor2}, Dr.~Ins \textsc{Tructor3}\par}
 \begin{titlepage}
