--- a/style/mynote.sty
+++ b/style/mynote.sty
@@ -56,11 +56,12 @@
 \ctexset{
 	today=big,
 	contentsname=\textbf{Contents},
-	section={beforeskip=0pt,afterskip=10pt},    
+	section={beforeskip=0pt,afterskip=3pt},    
+	chapter={beforeskip=0pt,afterskip=5pt},    	
 	part/format=\huge\bfseries\centering\color{靛蓝},
 	chapter/format=\LARGE\bfseries\centering\color{靛蓝},
-	section/format=\Large\bfseries\centering\color{靛蓝},
-	subsection/number={\textcolor{靛蓝}{\thesection}},
+	section/format=\Large\bfseries\color{靛蓝},
+	subsection/format=\color{靛蓝},
 }
 
 %%% 链接设置 %%%
