--- a/main.tex
+++ b/main.tex
@@ -13,6 +13,7 @@
 \coursedate{2023/5/2}
 \instructor{Instructors: Dr.~Ins \textsc{Tructor1}\par
    	Dr.~Ins \textsc{Tructor2}, Dr.~Ins \textsc{Tructor3}\par}
+\coverimage{figures/spongebob.png}
 \begin{titlepage}
     \maketitle
 \end{titlepage}
