--- a/style/mynote.sty
+++ b/style/mynote.sty
@@ -247,7 +247,7 @@
 	\vspace{1.5cm}
 	{\Huge\bfseries{\@coursename \par \@title} \par}
 	\vspace{2cm}
-	\@instructor
+	{\@instructor \par}
 	\vspace{2cm}
 	\includegraphics[width=0.5\textwidth]{\@coverimage}
 	\vfill
