--- a/main.tex
+++ b/main.tex
@@ -1,10 +1,11 @@
 \documentclass[12pt,A4paper,oneside]{ctexbook}
+
 \usepackage{./style/mynote}
-
 \usepackage{./style/code}
+\usepackage{./style/titlepage}
 
-\begin{document}
-	
+\usepackage{floatrow}
+
 \university{NEUQ}
 \coursename{Introduction~to~Artificial~Intelligence}
 \title{Lecture Note}
@@ -14,145 +15,68 @@
 \instructor{Instructors: Dr.~Ins \textsc{Tructor1}\par
    	Dr.~Ins \textsc{Tructor2}, Dr.~Ins \textsc{Tructor3}\par}
 \coverimage{figures/spongebob.png}
+
+\begin{document}
+	
 \begin{titlepage}
-    \maketitle
+   \maketitle
 \end{titlepage}
 
 \begin{titlepage}
 	\tableofcontents
 \end{titlepage}    
 
-\chapter{测试}
+	
+	
+	
+\section{介绍}
 
-\section{小小特色}
+简单模板。
+	
+\section{定义}
 
-向面民科（我自己）的latex模板，不仅能输出中文，连环境、命令都用中文，更具民科风范。
-我不会latex，尽量保持简单（甚至重复），不提供选项开关。
+\begin{Define}
+	定义。
+\end{Define}
 
-我并不要求该模板能满足我的所有需求，它更像中间产品，在此基础上再改造、再升级，满足最终要求。“再改造”与“不提供选项开关”不矛盾：该模板不会更改默认环境、命令，它只更改\代码{ctexart}外观，如果对目前改动不满意，可以重新定义旧环境、命令；“开关”往往只能更改一小部分，面对大改动需求，这种设计往往很无力。
-具体可参考源码\代码{morelull.cls}对\代码{引用}环境的重新定义。
+\begin{Example}
+	举例。
+\end{Example}
 
-\section{pandoc支持}
+\section{提示文本框}
 
-该模板同样能被pandoc使用。\代码{pandoc markdown}提供了很多元信息，可以按照以下方式书写：
-
-\begin{lstlisting}
-    ---
-    title: 这里是标题
-    toc: true
-    indent: true
-    documentclass: morelull
-    author: 这里写上作者姓名
-    date: \date
-    ---
-\end{lstlisting}
-
-完成后调用\代码{pandoc --pdf-engine xelatex file.md -o output.pdf}，需要明确指定latex引擎。
-
-\section{中文标点符号}
-
-\begin{itemize}
-\item{专名号：\专名{荀徒之}。}
-\item{着重号：早上\着重{日}出\着重{东方}。}
-\item{内联代码：庄重地写下了\代码{hello world}。}
-\end{itemize}
-
-\section{中看不中用的提示文本框}
-
-\subsection{提示作用}
-\begin{提示}
-    \begin{itemize}
-    \item{多边形是由同一平面内若干条不在同一直线上的线段组成；}
-    \item{是平面内的一些线段首尾顺次相连形成的封闭图形；}
-    \item{多边形的顶点数、边数、及角的个数相等；}
-    \item{多边形对角线的条数：n（n-3）/2；}
-    \end{itemize}
-\end{提示}
-
-\subsection{提醒、警告作用}
-\begin{提醒}
+\begin{mytips}[red]{结论}
     三角形的角平分线和这个角对边相交，这个顶点和交点的线段叫角平分线。
-
     如果一个直角三角形的斜边和一条直角边与另一个直角三角形的斜边和一条直角边对应成比例，那么这两个直角三角形相似。
-\end{提醒}
+\end{mytips}
 
-\subsection{注意、强调作用}
-\begin{注意}
-除了我们要用一般方法判定三角形相似之外，还有一些相似模型分享给大家。当我们看到这类模型的时候，就会直观的得出里面存在相似三角形（当然，解答题还是要写推理过程的），从而提高我们做题速度。简直是提速神器。
-\end{注意}
 
-\subsection{引用}
-\begin{引用}
-    这里写上名人的话。
+\begin{mybox}{三角形相似}
+如果一个三角形的两个角与另一个三角形的两个角对应相等，那么这两个三角形相似．
+\begin{mybox}[red]{}
+内容...
+\end{mybox}
+\begin{mybox}[brown]{test}
+内容...
+\end{mybox}
+简述为：两角对应相等，两三角形相似。
+\end{mybox}
 
-    “一切反动派都是纸老虎。” —— 毛泽东
-\end{引用}
+\section{插入代码}
 
-\section{数学环境}
-对于我这个民科而言，倒像是多余的。
-
-每个环境都提供锚点的前缀，该前缀与该环境名称相同。
-例如\nameref{命题:递增}环境，第一个参数是标题（命题名称），后一个参数就是锚点名称，假如这个锚点叫“递增”，那么整个锚点名称就叫“命题:递增”，
-同理，定理环境的前缀为“定理”……
-
-\begin{注意}
-    “命题:递增”的冒号（:）是英文标点。
-\end{注意}
-
-\begin{定理}{三角形相似}{三角形相似}
-    如果一个三角形的两个角与另一个三角形的两个角对应相等，那么这两个三角形相似．简述为：两角对应相等，两三角形相似。
-
-    参见\nameref{定理:三角形相似}。
-\end{定理}
-
-\begin{结论}{角分线1.1}{角分线}
-	三角形的三条角分线都在三角形的内部，且三条角分线相交于一点，这个交点叫做三角形的内心。三角形内心这个点到三角形三条边的距离相等（从三角形内心这个点分别向三条边做垂线，三条垂线段长度相等）。
-	参见\nameref{结论:角分线}。
-\end{结论}
-
-\begin{结论}{角分线1.1}{角分线}
-    三角形的三条角分线都在三角形的内部，且三条角分线相交于一点，这个交点叫做三角形的内心。三角形内心这个点到三角形三条边的距离相等（从三角形内心这个点分别向三条边做垂线，三条垂线段长度相等）。
-    参见\nameref{结论:角分线}。
-\end{结论}
-
-\begin{命题}{单调递增}{递增}
-以下函数单调增递。
-\[
-    f(x) = (x - 1) ^ 2
-\]
-
-参见\nameref{命题:递增}。
-\end{命题}
-
-\begin{定义}{抛物线}{抛物线}
-    一般地，自变量x和因变量y之间存在如下关系：$y=ax^2+bx+c$。
-
-    抛物线是轴对称图形。对称轴为直线$x=-b/2a$。
-
-    参见\nameref{定义:抛物线}。
-\end{定义}
-
-\section{扩展计算机语言高亮}
+\lstinputlisting{./code/example.py}
 
 \lstinputlisting[
-	style = python,
-	caption = {你好},
-	label = {nihao}
-]{./code/example.py}
-
-\lstinputlisting[
-	style = c++,
-	caption = {1},
-	label = {2}
+	caption=1,
+	label=2
 ]{./code/example.cpp}
 
 \lstinputlisting[
-	style = masm,
-	caption = {3},
-	label = {4}
+	caption=3,
+	label=4
 ]{./code/example.asm}
 
-\begin{lstlisting}[style = c++,title = \centering{\huge{6}}]
+\begin{lstlisting}
 #include <bits/stdc++.h>
 #define FOR(i, a, b) for(int i = a; i <= b; ++i)
 using namespace std;
@@ -168,5 +92,19 @@ signed main() {
 }
 \end{lstlisting}
 
+\section{图片}
+
+\begin{figure}[h]
+	\centering         
+	\includegraphics[width=2cm]{figures/spongebob.png} 
+	\includegraphics[scale=0.1]{figures/spongebob.png}
+	\includegraphics[height=3cm]{figures/spongebob.png} 
+	\caption*{slager|人人都是论文排版高手}
+\end{figure}
 
 \end{document}
+
+
+
+
+
